# PLAMS

./: .flake8  .gitignore  .isort.cfg  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  version.py
core/: basejob.py  csv_logger.py  enums.py  errors.py  formatters.py  functions.py  job_csv_formatter.py  jobmanager.py  jobrunner.py  logging.py  private.py  results.py  settings.py  threading_utils.py
doc/: aspell_ignore_list.txt  build_plams_doc  check_spellings.sh  requirements.txt
examples/: AMSMDJob.py  AMSPlumedMD.py  ASECalculator.py  BAND_NiO_HubbardU.py  BasicMDPostanalysis.py  ConformersGeneration.py  ConvertToAMSRKFTrajectory.py  CustomASECalculator.py  M3GNet.py  MoleculeSubstitution.py  MoleculesFromRKFTrajectory.py  MoleculesTable.py  PackMol.py  PackMolExample.py  PropertyPrediction.py  QE_AMS_AFM_HubbardU.py  ReactionEnergyBenchmark.py  ReductionOxidationPotentials.py  SellaTransitionStateSearch.py  TuningRangeSeparation.py  UseLowestEnergy.py  WaterOptimization.py  ams_crs.py  ams_pyCRS.py  bandfrag.py  generate_example.sh  get_charged_ions.py  get_hbonds.py  get_ionic_conductivity.py  get_irspectrum.py  ir_spectrum_from_md.py  numgrad.py  plot_correlation.py  reuse_forcefieldparams.py  rkf_to_wrapped_dcd.py
lazy_import/: __init__.py  lazy_import.py
mol/: atom.py  bond.py  context.py  identify.py  molecule.py  pdbtools.py
recipes/: Ox_potential.py  adfcosmorscompound.py  adfcosmorsconformers.py  adffragment.py  adfnbo.py  ams_crs.py  assign_charged_ions.py  bandfragment.py  counterpoise.py  cshadf.py  fcf_dos.py  global_minimum.py  greenkuboviscosity.py  numgrad.py  numhess.py  ox_potential.py  redox.py  redox_defaults.py  redox_potential.py  reorganization_energy.py  vibration.py
scripts/: plams  plams.py
tools/: converters.py  geometry.py  hbc_utilities.py  job_analysis.py  kftools.py  periodic_table.py  plams_matrix.py  plot.py  postprocess_results.py  reaction.py  reaction_energies.py  table_formatter.py  units.py
trajectories/: analysis.py  dcdfile.py  rkffile.py  rkfhistoryfile.py  sdffile.py  sdfhistoryfile.py  trajectory.py  trajectoryfile.py  xyzfile.py  xyzhistoryfile.py
unit_tests/: ASECalculator.py  conftest.py  test_ASECalculator.py  test_amsjob.py  test_amsresults.py  test_ase_interface.py  test_atom.py  test_basejob.py  test_csv_logger.py  test_functions.py  test_helpers.py  test_identify.py  test_identify_CO_6.py  test_kftools.py  (+21 more)
(+507 files in other folders)
